fix: remove bottom margin and change gap value

--- a/assets/styles/layout/_footer.css
+++ b/assets/styles/layout/_footer.css
@@ -106,7 +106,11 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: var(--spacing-xs);
+	gap: 5px;
+}
+
+.footer__contact-item p {
+	margin: 0;
 }
 
 .footer__contact-item i {
